ajout bouton page panel bloc text et block image

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
       "@/types/*": ["types/*"]
     }
   },
-  "include": ["src", "tsconfig.jest.json", "jest.config.js", "__mocks__"],
+  "include": ["src", "tsconfig.jest.json", "jest.config.js", "__mocks__", "src/types/aliases.d.ts"],
   "exclude": ["node_modules", "dist", "build"]
 }
