--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -10,15 +10,21 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "module": "commonjs",
-    "moduleResolution": "node", // ✅ Et non plus "bundler"
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+
+    // 👇 pour que les imports "@/..." fonctionnent dans les tests
     "baseUrl": "src",
     "paths": {
-      "@/*": ["*"]
+      "@/*": ["*"],
+      "@/components/*": ["components/*"],
+      "@/store/*": ["store/*"],
+      "@/utils/*": ["utils/*"],
+      "@/types/*": ["types/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "src/__tests__", "src/types/aliases.d.ts"]
 }
