--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.22.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
+    "zod": "^3.25.20",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
