--- a/package.json
+++ b/package.json
@@ -19,21 +19,25 @@
     "zustand": "^5.0.4"
   },
   "devDependencies": {
+    "@jest/types": "^29.6.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "stylelint": "^16.19.1",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
+    "ts-jest": "^29.3.4",
     "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --config jest.config.js",
     "eject": "react-scripts eject",
     "format": "prettier --write ."
   },
