--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
       "@/*": ["*"]
     }
   },
-  "include": ["src", "tsconfig.jest.json", "jest.config.js", "__mocks__", "src/types/aliases.d.ts"],
+  "include": ["src", "tsconfig.jest.json", "jest.config.js", "__mocks__", "src/types/aliases.d.ts", "jest.config.ts"],
   "exclude": ["node_modules", "dist", "build"]
 }
