--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest --config jest.config.js",
+    "test": "jest --config jest.config.ts",
     "eject": "react-scripts eject",
     "format": "prettier --write ."
   },
