--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
     "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
   },
   "scripts": {
