--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.11",
-    "@mui/material": "^6.4.11",
+    "@mui/icons-material": "^6.4.12",
+    "@mui/material": "^6.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "^5.0.1",
+    "use-sync-external-store": "^1.5.0",
     "web-vitals": "^2.1.4",
     "zod": "^3.25.20",
-    "zustand": "^5.0.4"
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@dnd-kit/core": "^6.3.1",
